--- a/AULA5/views/teste.ejs
+++ b/AULA5/views/teste.ejs
@@ -6,9 +6,11 @@
     </head>
     <body>
         <p>teste</p>
-        <form action="/ola" method="get">
-            <label>Escreva seu nome:</label>
-            <input type="text" name="nome">
+        <form action="/paginaHome" method="post">
+            <label>Digite suas informações:</label> <br>
+            <input type="text" placeholder="NOME" name="nome"> <br>
+            <input type="text" placeholder="SOBRENOME" name="sobrenome"> <br>
+            <input type="text" placeholder="CIDADE" name="cidade"> <br>
             <input type="submit">
         </form>
     </body>
