--- a/AULA6/views/lua.ejs
+++ b/AULA6/views/lua.ejs
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-   <h1><%= data.n1%> <%= data.n2%> <%= data.result%></h1> 
-   
+   <h1><%= data.result%></h1>  
 </body>
 </html>
