--- a/AULA6/views/form.ejs
+++ b/AULA6/views/form.ejs
@@ -6,7 +6,7 @@
     </head>
     <body>
         <p>teste</p>
-        <form action="/result" method="post">
+        <form action="/soma" method="post">
             <label>Digite um número: </label> 
             <input type="number"  name="n1">
              <br>
