--- a/ATIVIDADE24/views/cas.ejs
+++ b/ATIVIDADE24/views/cas.ejs
@@ -4,23 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="gpt.css">
     <title>Casa Rosa</title>
 </head>
 
-<br>
-    <h1>Casa Rosa</h1>
-        <p>Foi erguida em 1826 por iniciativa</p>
-        <p>de José Carneiro da Silva, primeiro</p>   
-        <p>barão e visconde de Araruama. A casa</p>   
-        <p>da fazenda Quissamã mostra o enriquecimento</p>    
-        <p>da aristocracia rural do norte fluminense</p>    
-        <p>com os engenhos de açúcar no século XIX.</p>    
-        <p>A casa hospedou o imperador D. Pedro II</p>    
-        <p>sua comitiva em 1847, quando estes</p>    
-        <p>visitavam a região norte fluminense e</p>     
-        <p>foram inspecionar as obras de construção </p>    
-        <p>do canal Campos-Macaé.</p>   
-        <br></br>
+<body>
+    <%- include('titulo')%>
+    <img src="./IMG/cas.jpg" alt="">
+    <div class="tet">
+        <h1>Casa Rosa</h1>
+        <p>Foi erguida em 1826 por iniciativa de José Carneiro da Silva, primeiro barão e visconde de Araruama. A casa da fazenda Quissamã mostra o enriquecimento    
+        da aristocracia rural do norte fluminense    
+        com os engenhos de açúcar no século XIX.   
+        A casa hospedou o imperador D. Pedro II  
+        sua comitiva em 1847, quando estes    
+        visitavam a região norte fluminense e    
+        foram inspecionar as obras de construção    
+        do canal Campos-Macaé.</p>   
+    </div>    
+    <br><br>
     <%- include('rodape')%>
 </body>
 </html>
