--- a/ATIVIDADE24/views/mac.ejs
+++ b/ATIVIDADE24/views/mac.ejs
@@ -4,25 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="gpt.css">
     <title>Machadinha</title>
 </head>
 
 <body>
-    <h1>Machadinha</h1>
-      <p>Localizada na Rodovia Municipal MC-67,</p>
-      <p>a antiga fazenda sobrevive em um sistema</p>    
-      <p>de autogestão da comunidade. O complexo</p>   
-      <p>é formado pelas ruínas da casa grande,</p>   
-      <p>o antigo armazém, a capela de Nossa Senhora</p>   
-      <p>do Patrocínio e o conjunto de senzalas</p>    
-      <p>totalmente restauradas. Um dos destaques</p>    
-      <p>do complexo é o Memorial Machadinha.</p>    
-      <p>Construído onde antes era o antigo salão</p>    
-      <p>comunitário, o Memorial tem como objetivo </p>    
-      <p>preservar a história do povo que deixou</p>    
-      <p>Kissama, em Angola, para se instalar no</p>   
-      <p>Brasil, dando origem ao município de Quissamã.</p>    
-      <br></br>
+    <%- include('titulo')%>
+    <img src="./IMG/mac.jpg" alt="">
+    <div class="tet">
+      <h1>Machadinha</h1>
+      <p>Localizada na Rodovia Municipal MC-67,
+      a antiga fazenda sobrevive em um sistema    
+      de autogestão da comunidade. O complexo  
+      é formado pelas ruínas da casa grande,   
+      antigo armazém, a capela de Nossa Senhora   
+      do Patrocínio e o conjunto de senzalas    
+      totalmente restauradas. Um dos destaques   
+      do complexo é o Memorial Machadinha.    
+      Construído onde antes era o antigo salão  
+      comunitário, o Memorial tem como objetivo    
+      preservar a história do povo que deixou    
+      Kissama, em Angola, para se instalar no   
+      Brasil, dando origem ao município de Quissamã.</p>
+    </div>
+    <br></br>
     <%- include('rodape')%>
 </body>
 </html>
