--- a/ATIVIDADE24/views/sob.ejs
+++ b/ATIVIDADE24/views/sob.ejs
@@ -4,25 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="gpt.css">
     <title>Sobradinho</title>
 </head>
 
 <body>
-    <h1>Sobradinho</h1>
-            <p>O Sobradinho é um casarão da década</p>
-            <p>de 1870. No fim do século XIX, foi</p>
-            <p>construída a Estação da Freguesia no</p>
-            <p>entorno da propriedade, com total de</p> 
-            <p>40 quilômetros de linha férrea.</p>
-            <p>Atualmente tem o objetivo de agregar</p>
-            <p>iniciativas educacionais e culturais,</p>
-            <p>onde se encontram oficinas de arte,</p>
-            <p>dança, música, xadrez e teatro.</p>
-            <p>O prédio abriga também a Biblioteca</p>
-            <p>Pública Municipal de Quissamã,</p> 
-            <p>o Cine Quissamã, o Café da Romana</p>
-            <p>e uma réplica da antiga Estação Ferroviária.</p>
-            <br></br>
+    <%- include('titulo')%>
+    <img src="./IMG/sob.jpg" alt="">
+    <div class="tet">
+        <h1>Sobradinho</h1>
+        <p>O Sobradinho é um casarão da década
+        de 1870. No fim do século XIX, foi
+        construída a Estação da Freguesia no
+        entorno da propriedade, com total de 
+        40 quilômetros de linha férrea.
+        Atualmente tem o objetivo de agregar
+        iniciativas educacionais e culturais,
+        onde se encontram oficinas de arte,
+        dança, música, xadrez e teatro.
+        O prédio abriga também a Biblioteca
+        Pública Municipal de Quissamã, 
+        o Cine Quissamã, o Café da Romana
+        e uma réplica da antiga Estação Ferroviária.</p>
+    </div>
+    <br></br>
     <%- include('rodape')%>
 </body>
 </html>
