--- a/ATIVIDADE24/public/gpt.css
+++ b/ATIVIDADE24/public/gpt.css
@@ -39,6 +39,19 @@ p {
     border-radius: 10px;
 }
 
+.links {
+    color:#000;
+    font-size: 30px;
+    font-family: Inter;
+    text-align: center;
+    border: 1px solid #000;
+    background-color: #fff;
+    border-radius: 10px;
+}
+.links :visited{
+    color: #000;
+}
+
 .rodape {
     color:#000;
     font-size: 20px;
@@ -70,3 +83,6 @@ img {
     width: 600px;
 }
 
+.cad{
+    font-size: 25px;
+}
