--- a/ATIVIDADE24/views/titulo.ejs
+++ b/ATIVIDADE24/views/titulo.ejs
@@ -1,1 +1,4 @@
 <div class="titulo">Guia Turístico</div>
+<div class="links"><a href="/"><b>Home/</b></a>
+<a href="/pont"><b>Pontos Turísticos/</b></a>
+<a href="/cad"><b>Visitas</b></a></div>
