--- a/ATIVIDADE24/views/pont.ejs
+++ b/ATIVIDADE24/views/pont.ejs
@@ -10,7 +10,8 @@
 
 <body>
     <%- include('titulo')%>
-    
+    <div class="centro">
+    <div class="container">
     <h1>Pontos turísticos:</h1>
     <ul>
         <a href="/jub">
@@ -26,6 +27,8 @@
             <li>Machadinha</li>
         </a>
     </ul>
+</div>
+</div>
 </body>
 
 </html>
