--- a/ATIVIDADE24/public/gpt.css
+++ b/ATIVIDADE24/public/gpt.css
@@ -16,10 +16,35 @@ ul a {
     background-color: #3DA5BA;
     font-size: 25px;
     font-weight: bold; 
-    text-decoration: underline;
+    text-decoration: none;
     color: #000;
 }
 
+.container{
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 50vh;
+    width: 40%;
+    border-radius: 20px;
+}
+.container h1 {
+    font-size: 45px;
+}
+
+li{
+    font-size: 30px;
+}
+
+.centro{
+    height: 80vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 p {
     color: #000;
     text-align: justify;
@@ -30,6 +55,10 @@ p {
 }
 
 .titulo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     color:#000;
     font-size: 40px;
     font-family: Inter;
@@ -38,18 +67,9 @@ p {
     background-color: #fff;
     border-radius: 10px;
 }
-
-.links {
-    color:#000;
-    font-size: 30px;
-    font-family: Inter;
-    text-align: center;
-    border: 1px solid #000;
-    background-color: #fff;
-    border-radius: 10px;
-}
-.links :visited{
-    color: #000;
+.titulo a {
+    color: black;
+    text-decoration: none;
 }
 
 .rodape {
