--- a/ATIVIDADE24/views/cad.ejs
+++ b/ATIVIDADE24/views/cad.ejs
@@ -19,7 +19,12 @@
     <input name="telefone" id="telefone" type="text" placeholder="Digite o seu telefone aqui" required>
     <br><br>
     <label for="local">Qual local gostaria de visitar?</label>
-    <input name="local" id="local" type="text" placeholder="Digite o local aqui" required>
+    <select name="local" id="local">
+      <option value="">Jurubatiba</option>
+      <option value="">Casa Rosa</option>
+      <option value="">Sobradinho</option>
+      <option value="">Machadinha</option>
+      </select>
     <br><br>
     <label for="dia">Qual vai ser o dia da visita?</label>
     <input name="dia" id="dia" type="date" placeholder="Digite o dia aqui" required>
@@ -27,7 +32,6 @@
     <input type="submit" id="1a20">
   </form>
   <br>
-  <%=resultado%>
+  <h1 id="texto"><%=resultado%></h1>
 </body>
-
 </html>
