--- a/ATIVIDADE24/views/titulo.ejs
+++ b/ATIVIDADE24/views/titulo.ejs
@@ -1,4 +1,8 @@
-<div class="titulo">Guia Turístico</div>
-<div class="links"><a href="/"><b>Home/</b></a>
-<a href="/pont"><b>Pontos Turísticos/</b></a>
-<a href="/cad"><b>Visitas</b></a></div>
+<div class="titulo">
+    Guia Turístico
+    <div>    
+    <a href="/"><b>Home/</b></a>
+    <a href="/pont"><b>Pontos Turísticos/</b></a>
+    <a href="/cad"><b>Visitas</b></a>
+</div>
+</div>
