--- a/ATIVIDADE24/public/gpt.css
+++ b/ATIVIDADE24/public/gpt.css
@@ -1,4 +1,5 @@
 body {
+    margin: 0%;
     font-family: Inter;
     background-color: #3DA5BA;
     color: #000;
@@ -6,7 +7,6 @@ body {
 
 h1 {
     color: #000;
-
     font-family: Inter;
     font-size: 30px;
     font-weight: 200;   
@@ -20,7 +20,7 @@ ul a {
     color: #000;
 }
 
-.container{
+.container {
     background-color: white;
     display: flex;
     justify-content: center;
@@ -30,15 +30,16 @@ ul a {
     width: 40%;
     border-radius: 20px;
 }
+
 .container h1 {
     font-size: 45px;
 }
 
-li{
-    font-size: 30px;
+li {
+    font-size: 40px;
 }
 
-.centro{
+.centro {
     height: 80vh;
     width: 100%;
     display: flex;
@@ -62,47 +63,95 @@ p {
     color:#000;
     font-size: 40px;
     font-family: Inter;
-    text-align: center;
-    border: 1px solid #000;
     background-color: #fff;
-    border-radius: 10px;
+    text-align: start;
+    padding: 5px;
+    display: block;
+    float: left;
+    box-sizing: border-box;
+    width: 100%;
 }
+
+.titulo h1 {
+    text-align: start;
+    text-decoration: none;
+    padding: 5px;
+    display: block;
+    float: left;
+    box-sizing: border-box;
+    width: 40%;
+    font-weight: 1000;
+    font-size: 35px;
+}
+
 .titulo a {
     color: black;
     text-decoration: none;
+    border-radius: 20px;
+    box-sizing: border-box;
+    border: 1px solid rgb(255, 255, 255);
+    margin: 5px;
+    text-align: center;
+    text-decoration: none;
+    padding: 5px;
+    display: block;
+    float: left;
+    width: 15%;
+    background-color: #c2eef8;
+    margin-top: 20px;
+    margin-left: 60px;
+    font-size: 35px;
+}
+
+.titulo a:hover {
+    box-shadow: inset 0px 0px 24px 0px rgba(0,0,0,0.1);
 }
 
 .rodape {
     color:#000;
     font-size: 20px;
     font-family: Inter;
-    border: 1px solid #000;
     display: inline;
     padding: 10px;
     background-color: #fff;
     border-radius: 10px;
     margin: 0 850px;
+    box-sizing: border-box;
+    width: 100%;
+    height: 110px;
+    text-align: center;
+    align-items: center;
 }
+
+.rodape a {
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+}
+
 
 .tet {
     width: 700px;
-    border: 1px solid #000;
     background-color: #fff;
     padding: 0 20px;
     height: 400px;
     float: left;
-    margin-top: 70px;
-    margin-left: 250px;
+    margin-top: 150px;
+    margin-left: 200px;
     border-radius: 30px;
 }
 
 img {
     height: 400px;
-    margin: 70px;
+    margin: 150px;
     border-radius: 30px;
     width: 600px;
 }
 
-.cad{
+.cad {
     font-size: 25px;
+}
+
+#texto {
+    font-size: 28px;
 }
