--- a/ATIVIDADE24/views/cad.ejs
+++ b/ATIVIDADE24/views/cad.ejs
@@ -10,28 +10,32 @@
 
 <body>
   <%- include('titulo')%>
-  <h1>Cadastro</h1>
-  <form action="/salvar" method="post" class="cad">
-    <label for="nome">Digite seu nome:</label>
-    <input name="nome" id="nome" type="text" placeholder="Digite o seu nome aqui" required>
-    <br><br>
-    <label for="telefone">Digite seu telefone:</label>
-    <input name="telefone" id="telefone" type="text" placeholder="Digite o seu telefone aqui" required>
-    <br><br>
-    <label for="local">Qual local gostaria de visitar?</label>
-    <select name="local" id="local">
-      <option value="">Jurubatiba</option>
-      <option value="">Casa Rosa</option>
-      <option value="">Sobradinho</option>
-      <option value="">Machadinha</option>
-      </select>
-    <br><br>
-    <label for="dia">Qual vai ser o dia da visita?</label>
-    <input name="dia" id="dia" type="date" placeholder="Digite o dia aqui" required>
-    <br><br>
-    <input type="submit" id="1a20">
-  </form>
-  <br>
-  <h1 id="texto"><%=resultado%></h1>
+  <div class="centro">
+    <div class="container">
+      <h1>Cadastro</h1>
+      <form action="/salvar" method="post" class="cad">
+        <label for="nome">Digite seu nome:</label>
+        <input name="nome" id="nome" type="text" placeholder="Digite o seu nome aqui" required>
+        <br><br>
+        <label for="telefone">Digite seu telefone:</label>
+        <input name="telefone" id="telefone" type="text" placeholder="Digite o seu telefone aqui" required>
+        <br><br>
+        <label for="local">Qual local gostaria de visitar?</label>
+        <select name="local" id="local">
+          <option value="Jurubatiba">Jurubatiba</option>
+          <option value="Casa Rosa">Casa Rosa</option>
+          <option value="Sobradinho">Sobradinho</option>
+          <option value="Machadinha">Machadinha</option>
+        </select>
+        <br><br>
+        <label for="dia">Qual vai ser o dia da visita?</label>
+        <input name="dia" id="dia" type="date" placeholder="Digite o dia aqui" required>
+        <br><br>
+        <input type="submit" id="1a20">
+      </form>
+      <br>
+      <h1 id="texto"><%=resultado%></h1>
+    </div>
+  </div>
 </body>
 </html>
