--- a/ATIVIDADE24/views/index.ejs
+++ b/ATIVIDADE24/views/index.ejs
@@ -10,12 +10,11 @@
 
 <body>
     <%- include('titulo')%>
-    <img src="./IMG/qui.jpg" alt="">
+    <img src="./IMG/qui.jpg" alt="Igreja">
     <div class="tet">
         <h1>Quer conhecer Quissamã?</h1>
         <p>Quissamã é uma cidade do Estado do Rio de Janeiro. O município se estende por 712,9 km² e contava com 24 700 habitantes no último censo. Os habitantes se chamam quissamaenses.
         Vizinho dos municípios de Carapebus, Conceição de Macabu e Campos dos Goytacazes.</p>   
     </div> 
 </body>
-
 </html>
