--- a/ATIVIDADE24/views/titulo.ejs
+++ b/ATIVIDADE24/views/titulo.ejs
@@ -1,8 +1,8 @@
 <div class="titulo">
-    Guia Turístico
+    <h1>Guia Turístico</h1>
     <div>    
-    <a href="/"><b>Home/</b></a>
-    <a href="/pont"><b>Pontos Turísticos/</b></a>
+    <a href="/"><b>Home</b></a>
+    <a href="/pont"><b>Pontos Turísticos</b></a>
     <a href="/cad"><b>Visitas</b></a>
 </div>
 </div>
