--- a/ATIVIDADE24/public/gpt.css
+++ b/ATIVIDADE24/public/gpt.css
@@ -143,7 +143,8 @@ p {
 
 img {
     height: 400px;
-    margin: 150px;
+    margin-top: 150px;
+    margin-left: 130px;
     border-radius: 30px;
     width: 600px;
 }
