--- a/ATIVIDADE24/views/pont.ejs
+++ b/ATIVIDADE24/views/pont.ejs
@@ -14,16 +14,16 @@
     <div class="container">
     <h1>Pontos turísticos:</h1>
     <ul>
-        <a href="/jub">
+        <a class="pon" href="/jub">
             <li>Jurubatiba</li>
         </a>
-        <a href="/cas">
+        <a class="pon" href="/cas">
             <li>Casa Rosa</li>
         </a>
-        <a href="/sob">
+        <a class="pon" href="/sob">
             <li>Sobradinho</li>
         </a>
-        <a href="/mac">
+        <a class="pon" href="/mac">
             <li>Machadinha</li>
         </a>
     </ul>
