--- a/ATIVIDADE24/public/gpt.css
+++ b/ATIVIDADE24/public/gpt.css
@@ -111,16 +111,14 @@ p {
     color:#000;
     font-size: 20px;
     font-family: Inter;
-    display: inline;
     padding: 10px;
     background-color: #fff;
-    border-radius: 10px;
-    margin: 0 850px;
     box-sizing: border-box;
     width: 100%;
     height: 110px;
     text-align: center;
     align-items: center;
+    margin-top: 134px;
 }
 
 .rodape a {
@@ -156,3 +154,42 @@ img {
 #texto {
     font-size: 28px;
 }
+
+@media only screen and (max-width: 1024px) {
+    [class*="container"] {
+        width: 75%;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    [class*="tet"] {
+        width: 58%;
+        margin-left: 190px;
+        margin-top: 5%;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    img {
+        margin-top: 10%;
+        margin-left: 190px;
+        width: 61%;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    [class*="rodape"] {
+        width: 100%;
+        height: 90px;   
+        margin-top: 625px;
+    } 
+}
+
+@media only screen and (max-width: 1024px) {
+    .titulo a {
+        margin-left: 25px; 
+    } 
+}
+
+
+
